# Go-Job

./: .env.example  .eslintrc.json  .gitignore  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  alembic_sqlite.ini  main.py  package.json  pyproject.toml  requirements.txt
apps/api/alembic/: README.md  env.py  sqlite_test.ini
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/src/core/: config.py
apps/api/src/models/: __init__.py  base.py  job_application.py  profile.py  resume.py  user.py
apps/extension/: .env.example  README.md  index.html  package.json
apps/extension/src/: App.tsx
apps/web/: README.md  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
docker/: api.Dockerfile  extension.Dockerfile  web.Dockerfile
docs/: README.md  architecture.md  roadmap.md  standards.md
