[project]
name = "gojob-api"
version = "0.1.0"
description = "Backend service for GoJob"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.12.0",
  "redis>=5.0.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.0"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
